# monday

./: LICENSE  pyproject.toml  ruff.toml  test.py
monday/: __init__.py  client.py  utils.py
monday/graphql/: client.py
monday/resources/: __init__.py  base.py  boards.py  columns.py  folders.py  groups.py  notifications.py  tags.py  teams.py  updates.py  users.py  versions.py  webhooks.py  workspaces.py
monday/resources/types/: boards.py  columns.py  generic_types.py  types.py  users.py  workspaces.py
src/monday/: __init__.py  client.py  exceptions.py  utils.py
src/monday/graphql/: client.py
src/monday/resources/: __init__.py  base.py  boards.py  columns.py  folders.py  groups.py  items.py  notifications.py  tags.py  teams.py  updates.py  users.py  versions.py  webhooks.py  workspaces.py
src/monday/resources/types/: types.py
tests/resources/: workspaces.py
