[tool.poetry]
name = "monday"
version = "0.1.0"
description = ""
authors = ["Giovanni <42703789+gbronca@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
